1998-07-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acffi.m4: Rename AC_DEFINE of USE_FFCALL to USE_AVCALL.

1998-07-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acpointerfmt.m4.

	* acpointerfmt.m4: New file.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (EXTRA_DIST): Add acobjclibs.m4 and acreplacefuncs.m4.

	* acobjclibs.m4: New file.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acreplacefuncs.m4: New file.  Like AC_REPLACE_FUNCS, but 
	uses .lo suffix.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acinline.m4: New file.  

	* Makefile.am: Add acinline.m4 to EXTRA_DIST.

1998-07-18  Alex Lancaster  <alex@santafe.edu>

	* acffi.m4: Make FFI{LIBS, LDFLAGS} variables use curly-braces rather
	than round-braces to ensure that shell scripts variables can be
	assigned these extracted variables.

	* actcltk.m4 : Likewise for {TK,TCL,TCLOBJ}LDFLAGS.

	* acfind.m4: Likewise for _ldflags.

1998-07-13  Alex Lancaster  <alex@santafe.edu>

	* acswarm.m4: Add file.  Add two new m4 macros al_{SWARM_LOAD,
	SWARM_INIT} to search for current Swarm config for applications and
	libraries.

	* Makefile.am (EXTRA_DIST): Add acswarm.m4.

1998-07-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* actcltk.m4 (md_FIND_BLT): Don't set default bltlibname to BLT8.0.

1998-06-30  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* acfind.m4: Use $$1libdir, not $$libdir.

	* actcltk.m4 (INCPLACES, LIBPLACES): Add tcl8.1 and tk8.1.
	(md_FIND_TCL_LIBRARIES, md_FIND_TK_LIBRARIES): Add 81 and 8.1 for
	Tcl library versions.  Clear t{cl,k}libdir before checking.
	(bltlibdir): Substitute.

	* acfind.m4: New file.

	* acpng.m4: Move md_FIND_{LIB,INCLUDE} to acfind.m4.

	* actcltk.m4: Use md_FIND_LIB in md_FIND_BLT.

1998-06-25  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* acpng.m4: Use zliblibdir and pnglibdir instead of zlibdir and
	pngdir.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>
